--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -102,7 +102,7 @@
                 </a>
                 <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a asp-area="LOC_Country" asp-controller="LOC_Country" asp-action="OpenPage">
+                        <a asp-area="LOC_Country" asp-controller="LOC_Country" asp-action="Add">
                             <i class="bi bi-plus-circle-fill" style="font-size: 16px"></i><span>Add Country</span>
                         </a>
                     </li>
@@ -120,7 +120,7 @@
                 </a>
                 <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a asp-area="LOC_State" asp-controller="LOC_State" asp-action="OpenPage">
+                        <a asp-area="LOC_State" asp-controller="LOC_State" asp-action="Add">
                             <i class="bi bi-plus-circle-fill" style="font-size: 16px"></i><span>Add State</span>
                         </a>
                     </li>
@@ -138,7 +138,7 @@
                 </a>
                 <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a asp-area="LOC_City" asp-controller="LOC_City" asp-action="OpenPage">
+                        <a asp-area="LOC_City" asp-controller="LOC_City" asp-action="Add">
                             <i class="bi bi-plus-circle-fill" style="font-size: 16px"></i><span>Add City</span>
                         </a>
                     </li>
@@ -156,7 +156,7 @@
                 </a>
                 <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a asp-area="CON_Contact" asp-controller="CON_Contact" asp-action="OpenPage">
+                        <a asp-area="CON_Contact" asp-controller="CON_Contact" asp-action="Add">
                             <i class="bi bi-plus-circle-fill" style="font-size: 16px"></i><span>Add Contact</span>
                         </a>
                     </li>
@@ -174,7 +174,7 @@
                 </a>
                 <ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a asp-area="MST_ContactCategory" asp-controller="MST_ContactCategory" asp-action="OpenPage">
+                        <a asp-area="MST_ContactCategory" asp-controller="MST_ContactCategory" asp-action="Add">
                             <i class="bi bi-plus-circle-fill" style="font-size: 16px"></i><span>Add Contact Category</span>
                         </a>
                     </li>
