--- a/Areas/CON_Contact/Views/CON_Contact/CON_ContactList.cshtml
+++ b/Areas/CON_Contact/Views/CON_Contact/CON_ContactList.cshtml
@@ -69,7 +69,7 @@
 
 
     <div style="margin:20px 0px;">
-        <form method="post" asp-area="CON_Contact" asp-controller="CON_Contact" asp-action="OpenPage">
+        <form method="post" asp-area="CON_Contact" asp-controller="CON_Contact" asp-action="Add">
             <button id="sample_editable_1_2_new" class="btn btn-primary">
                 <i class="mr-cus5 bi bi-plus-circle-fill"></i>Add Contact
             </button>
@@ -106,7 +106,7 @@
                         <td>
                             <div class="row">
                                 <div class="col-lg-6">
-                                    <form method="post" asp-controller="CON_Contact" asp-action="OpenPage">
+                                    <form method="post" asp-controller="CON_Contact" asp-action="Add">
                                         <input type="hidden" name="ContactID" value="@Convert.ToInt32(dr["ContactID"])" />
                                         <button class="btn btn-success"><i class="bi bi-pencil-square"></i></button>
                                     </form>
