--- a/Areas/LOC_City/Views/LOC_City/LOC_CityList.cshtml
+++ b/Areas/LOC_City/Views/LOC_City/LOC_CityList.cshtml
@@ -62,7 +62,7 @@
 
 
     <div style="margin:20px 0px;">
-        <form asp-area="LOC_City" method="post" asp-controller="LOC_City" asp-action="OpenPage">
+        <form asp-area="LOC_City" method="post" asp-controller="LOC_City" asp-action="Add">
             <button id="sample_editable_1_2_new" class="btn btn-primary">
                 <i class="mr-cus5 bi bi-plus-circle-fill"></i>Add City
             </button>
@@ -94,7 +94,7 @@
                     <td>
                         <div class="row">
                             <div class="col-lg-6">
-                                <form method="post" asp-controller="LOC_City" asp-action="OpenPage">
+                                <form method="post" asp-controller="LOC_City" asp-action="Add">
                                     <input type="hidden" name="CityID" value="@Convert.ToInt32(dr["CityID"])" />
                                     <button type="submit" class="btn btn-success"><i class="bi bi-pencil-square"></i></button>
                                 </form>
