--- a/Areas/LOC_Country/Views/LOC_Country/LOC_CountryList.cshtml
+++ b/Areas/LOC_Country/Views/LOC_Country/LOC_CountryList.cshtml
@@ -45,7 +45,7 @@
 
 
     <div style="margin:20px 0px;">
-        <form method="post" asp-area="LOC_Country" asp-controller="LOC_Country" asp-action="OpenPage">
+        <form method="post" asp-area="LOC_Country" asp-controller="LOC_Country" asp-action="Add">
             <button class="btn btn-primary">
                 <i class="mr-cus5 bi bi-plus-circle-fill"></i>Add Country
             </button>
@@ -73,7 +73,7 @@
                     <td>
                         <div class="row">
                             <div class="col-lg-6">
-                                <form method="post" asp-controller="LOC_Country" asp-action="OpenPage">
+                                <form method="post" asp-controller="LOC_Country" asp-action="Add">
                                     <input type="hidden" name="CountryID" value="@Convert.ToInt32(@dr["CountryID"])" />
                                     <button type="submit" class="btn btn-success"><i class="bi bi-pencil-square"></i></button>
                                 </form>
